Change BST Visualizer to Tree Visualizer
Updated project card to link to Tree Visualizer and modified text.

--- a/index.html
+++ b/index.html
@@ -274,12 +274,12 @@
                 </div>
             </a>
 
-            <a href="/BSTVisualizer/" class="project-card card-bst" data-tilt>
+            <a href="/TreeVisualizer/" class="project-card card-bst" data-tilt>
                 <div class="card-content">
                     <i class="card-icon fa-solid fa-network-wired"></i>
                     <div class="text-wrapper">
-                        <h2>BST Visualizer</h2>
-                        <p>Interactive tool to explore Binary Search Tree data structures.</p>
+                        <h2>Tree Visualizer</h2>
+                        <p>Interactive tool to explore Binary Search Tree data structures, AVL and RBT included.</p>
                     </div>
                 </div>
             </a>
